--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
+        "@vitejs/plugin-vue": "^4.0.0",
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.2",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
+        "pdfjs-dist": "3.11.174",
         "postcss": "^8.4.6",
         "tailwindcss": "^3.1.0",
-        "vite": "^4.0.0"
+        "vite": "^4.0.0",
+        "vue": "^3.2.36"
     }
 }
