--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 /node_modules
-/public/build
+# Ignore all inside build except Vite build outputs
+/public/build/*
+!/public/build/manifest.json
+!/public/build/assets/
 /public/hot
 /public/storage
 /storage/*.key
